[package]
name = "ens-rest-server"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EnormousCloud/ens-api/"
homepage = "https://github.com/EnormousCloud/ens-api/"
description = "Ethereum Name Service Rust server"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0" }
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = { version = "0.1" }
cached = { version = "0.26" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
hex = "0.4"
hex-literal = "0.3"
jsonrpc-core = "18.0"
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
ureq = { version = "2.3" }
web3 = { version = "0.17" }
